// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Treeus Basic 1`] = `
<body>
  <div>
    <div
      style="width: 150px;"
    >
      <div
        class="Treeus__container"
        tabindex="-1"
      >
        <ul
          class="Treeus"
        >
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="SU6mLp-z59wMvMC_ImHq_"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="9ESiSEAKTkfm4BwgR1lpX"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="_Z04PMu7kUV4cYeunCL0H"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="omeZRMgST-fHhWNI9t6vT"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="fVopM6JcICVmCeFJGAnBD"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Treeus CustomRender 1`] = `
<body>
  <div>
    <div
      style="width: 150px;"
    >
      <div
        class="Treeus__container"
        tabindex="-1"
      >
        <ul
          class="Treeus Treeus_tennis"
        >
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="u2jVk7Ld8YO-6pDh3AG4C"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="xx8yuEfe68kqbtaWIfOJx"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Treeus DarkTheme 1`] = `
<body>
  <div>
    <div
      style="width: 150px;"
    >
      <div
        class="Treeus__container"
        tabindex="-1"
      >
        <ul
          class="Treeus Treeus_dark"
        >
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="mNxvmMcEM63qwTzneBHde"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="QDPf6SoFikKDpuHAEEBG3"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="kO9U9xG_uOy0rm7wTytnN"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="J0dIFL-L9ACnMBvF5gad-"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="hBZrzWPKxlczIRmHzzE9D"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Treeus DifferentNesting 1`] = `
<body>
  <div>
    <div
      style="width: 150px;"
    >
      <div
        class="Treeus__container"
        tabindex="-1"
      >
        <ul
          class="Treeus"
        >
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="Q7P1Fr-tDPnZtAWHHpKEC"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-open="false"
            data-selected="false"
            id="xtQ6ueYCjbdOkHowpIn9m"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
          <li
            class="Treeus__listItem"
            data-has-children="true"
            data-open="false"
            data-selected="false"
            id="7_FGVY6UY7SZfb2gXj5qS"
            tabindex="0"
          >
            <label
              class="Treeus__listItemLabel"
            >
              test
            </label>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
